# playwright_template

./: README.md  conftest.py  pyproject.toml  settings.py  test_python_org.py
helper/: base.py
pages/: main_page.py
